<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">

            <EditText
                android:id="@+id/activity_main_movie_name_edittext"
                android:hint="@string/new_movie_name_edittext_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/activity_main_movie_type_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_movie_type_edittext_hint"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/activity_main_movie_year_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/new_movie_year_edittext_hint"
                android:maxLines="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/activity_main_add_movie_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_movie_add_button_text"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/activity_main_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_listview_button_text"/>

    <ListView
        android:id="@+id/activity_main_movie_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
